--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "638e3f47-4ad6-4cf6-849c-d84782392aa4"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
